create common container for logo and login header

--- a/html/login.html
+++ b/html/login.html
@@ -17,13 +17,16 @@
 <body class="body">
     <div class="login-wrapper">
         <div class="login-logo-section">
-            <img class="login-logo" src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
-        </div>
-        <div class="login-container">
+            <div class="login-logo">
+                <img src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
+            </div>
             <div class="login-header">
                 <p class="login-header-text">Not a Join user?</p>
                 <a href="../html/signup.html" class="signup-button">Sign up</a>
             </div>
+        </div>
+        <div class="login-container">
+            
             <main class="login-card">
                 <h1 class="login-title">Log in</h1>
                 <form class="login-form" id="login-form" novalidate>
