update style in login container without position: absolut. new order and class for footer.

--- a/html/login.html
+++ b/html/login.html
@@ -26,7 +26,6 @@
             </div>
         </div>
         <div class="login-container">
-            
             <main class="login-card">
                 <h1 class="login-title">Log in</h1>
                 <form class="login-form" id="login-form" novalidate>
@@ -51,11 +50,11 @@
                 </form>
                 <p class="login-error-message" id="login-error-message"></p>
             </main>
-            <footer class="login-footer">
-                <a href="../html/privacy_policy.html">Privacy Policy</a>
-                <a href="../html/legal_notice.html">Legal notice</a>
-            </footer>
         </div>
+        <footer class="login-footer sticky-bottom">
+            <a href="../html/privacy_policy.html">Privacy Policy</a>
+            <a href="../html/legal_notice.html">Legal notice</a>
+        </footer>
     </div>
 </body>
 <script src="../scripts/firebase.js"></script>
