restructure signup page

--- a/html/signup.html
+++ b/html/signup.html
@@ -30,9 +30,8 @@
         <div class="login-logo-section">
             <img class="login-logo" src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
         </div>
-        <div class="login-header">
-        </div>
-        <main class="login-card signup-card">
+        <div class="login-container">
+            <main class="login-card signup-card">
             <a href="../html/login.html" class="back-arrow">
                 <img class="hover-img" src="../assets/icons/signUp/back_arrow_short.svg" alt="Back to login">
             </a>
@@ -68,6 +67,7 @@
                 </div>
             </form>
         </main>
+        </div>
         <footer class="login-footer">
             <a href="../html/privacy_policy.html">Privacy Policy</a>
             <a href="../html/legal_notice.html">Legal notice</a>
