create hidden sign up button below login container only enabled below width 600px

--- a/html/login.html
+++ b/html/login.html
@@ -51,6 +51,10 @@
                 <p class="login-error-message" id="login-error-message"></p>
             </main>
         </div>
+        <div class="login-mobile">
+                <p class="login-header-text">Not a Join user?</p>
+                <a href="../html/signup.html" class="signup-button">Sign up</a>
+            </div>
         <footer class="login-footer sticky-bottom">
             <a href="../html/privacy_policy.html">Privacy Policy</a>
             <a href="../html/legal_notice.html">Legal notice</a>
