create hidden sign up button below login container only enabled below width 600px

--- a/html/login.html
+++ b/html/login.html
@@ -39,6 +39,7 @@
                             placeholder="Password" required>
                         <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                     </div>
+                    <p class="login-error-message" id="login-error-message"></p>
                     <div class="login-buttons">
                         <button type="submit" class="login-button-primary" id="login-btn">
                             Log in
@@ -48,8 +49,11 @@
                         </button>
                     </div>
                 </form>
-                <p class="login-error-message" id="login-error-message"></p>
             </main>
+            <div class="login-mobile">
+                <p class="login-header-text">Not a Join user?</p>
+                <a href="../html/signup.html" class="signup-button">Sign up</a>
+            </div>
         </div>
         <footer class="login-footer sticky-bottom">
             <a href="../html/privacy_policy.html">Privacy Policy</a>
