update style of input fields

--- a/html/signup.html
+++ b/html/signup.html
@@ -37,21 +37,21 @@
             </a>
             <h1 class="login-title">Sign up</h1>
             <form class="signup-form" id="signup-form" novalidate>
-                <label class="padding-sign-up-input subtask-section name">
+                <label class="sign-up-input name">
                     <input type="text" id="signup-name" class="login-input" placeholder="Name" required>
                 </label>
                 <span class="input-error" id="error-signup-name"></span>
-                <label class=" padding-sign-up-input subtask-section mail">
+                <label class="sign-up-input mail">
                     <input autocomplete="username" type="email" id="signup-email" class="login-input"
                         placeholder="Email" required>
                 </label>
                 <span class="input-error" id="error-signup-email"></span>
-                <label class="padding-sign-up-input subtask-section lock">
+                <label class="sign-up-input lock">
                     <input autocomplete="current-password" type="password" id="signup-password" class="login-input"
                         placeholder="Password" required>
                 </label>
                 <span class="input-error" id="error-signup-password"></span>
-                <label class="padding-sign-up-input subtask-section lock">
+                <label class="sign-up-input lock">
                     <input autocomplete="current-password" type="password" id="signup-password-confirm"
                         class="login-input" placeholder="Confirm Password" required>
                 </label>
