bugfix relation of signup button to form element.

--- a/html/signup.html
+++ b/html/signup.html
@@ -62,7 +62,7 @@
                 <span> I accept the <a href="#">Privacy policy</a></span>
             </label>
             <div class="login-buttons">
-                <button type="submit" class="signup-button-primary" id="signup-btn" disabled>
+                <button type="submit" class="signup-button-primary" id="signup-btn" form="signup-form" disabled>
                     Sign up
                 </button>
             </div>
