update container for login logo equal to login page

--- a/html/signup.html
+++ b/html/signup.html
@@ -28,10 +28,12 @@
     </div>
     <div class="login-wrapper">
         <div class="login-logo-section">
-            <img class="login-logo" src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
+            <div class="login-logo" >
+                <img src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
+            </div>
         </div>
         <div class="login-container">
-            <main class="login-card signup-card">
+            <main class="login-card">
             <a href="../html/login.html" class="back-arrow">
                 <img class="hover-img" src="../assets/icons/signUp/back_arrow_short.svg" alt="Back to login">
             </a>
