--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -32,7 +32,7 @@
                     <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
                 </section>
                 <nav class="sidebar-nav">
-                    <a href="#" class="sidebar-nav-section">
+                    <a href="/html/summary.html" class="sidebar-nav-section">
                         <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                         <p>Summary</p>
                     </a>
