move content of login.html into index.html and update links to index

--- a/html/signup.html
+++ b/html/signup.html
@@ -30,7 +30,7 @@
         </div>
         <div class="login-container">
             <main class="login-card">
-            <a href="../html/login.html" class="back-arrow">
+            <a href="../index.html" class="back-arrow">
                 <img class="hover-img" src="../assets/icons/signUp/back_arrow_short.svg" alt="Back to login">
             </a>
             <h1 class="login-title">Sign up</h1>
