--- a/index.html
+++ b/index.html
@@ -4,60 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Template</title>
-    <link rel="stylesheet" href="./style/standard.css">
-    <link rel="stylesheet" href="./style/mainframe.css">
-    <link rel="shortcut icon" href="./assets/icons/logo/logoSmall.svg">
+    <title>Join - Log in</title>
+    <link rel="stylesheet" href="../style/standard.css">
+    <link rel="stylesheet" href="../style/summary_login/login.css">
+    <link rel="stylesheet" href="../style/summary_login/login_responsive.css">
+    <link rel="stylesheet" href="../style/mainframe.css">
+    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+
+
 </head>
 
 <body class="body">
-    <aside class="sidebar">
-        <div class="sidebar_upper_section">
-            <section class="logo-section">
-                <img class="logo" src="./assets/icons/logo/logo_white.svg" alt="Join logo">
-            </section>
-            <nav class="sidebar-nav">
-                <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/summary.svg" alt="summary icon">
-                    <p>Summary</p>
-                </a>
-                <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/addTask.svg" alt="Add Task icon">
-                    <p>Add Task</p>
-                </a>
-                <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/board.svg" alt="Board icon">
-                    <p>Board</p>
-                </a>
-                <a href="/contacts.html" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/contacts.svg" alt="Contacts icon">
-                    <p>Contacts</p>
-                </a>
-
-            </nav>
+    <div class="login-wrapper">
+        <div class="login-logo-section">
+            <div class="login-logo">
+                <img src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
+            </div>
+            <div class="login-header">
+                <p class="login-header-text">Not a Join user?</p>
+                <a href="../html/signup.html" class="signup-button">Sign up</a>
+            </div>
         </div>
-        <footer class="sidebar-footer">
-            <a href="/html/privacy_policy.html">Privacy Policy</a>
-            <a href="/html/legal_notice.html">Legal notice</a>
+        <div class="login-container">
+            <main class="login-card">
+                <h1 class="login-title">Log in</h1>
+                <form class="login-form" id="login-form" novalidate>
+                    <div class="input-wrapper">
+                        <input autocomplete="username" type="email" id="login-email" class="login-input"
+                            placeholder="Email" required>
+                        <img src="../assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
+                    </div>
+                    <div class="input-wrapper">
+                        <input autocomplete="current-password" type="password" id="login-password" class="login-input"
+                            placeholder="Password" required>
+                        <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
+                    </div>
+                    <p class="login-error-message" id="login-error-message"></p>
+                    <div class="login-buttons">
+                        <button type="submit" class="login-button-primary" id="login-btn">
+                            Log in
+                        </button>
+                        <button type="button" class="login-button-secondary guest-button" id="guest-login-btn">
+                            Guest Log in
+                        </button>
+                    </div>
+                </form>
+            </main>
+            <div class="login-mobile">
+                <p class="login-header-text">Not a Join user?</p>
+                <a href="../html/signup.html" class="signup-button">Sign up</a>
+            </div>
+        </div>
+        <footer class="login-footer sticky-bottom">
+            <a href="../html/privacy_policy.html">Privacy Policy</a>
+            <a href="../html/legal_notice.html">Legal notice</a>
         </footer>
-    </aside>
-    <article>
-        <header class="header">
-            <nav class="header-nav">
-                <p>Kanban Project Management Tool</p>
-                <section class="header-side-buttons">
-                    <a href="/html/help.html">
-                        <img src="/assets/icons/header/help.svg" alt="help icon">
-                    </a>
-                    <a href="#">
-                        <img src="/assets/icons/header/user_placeholder.svg" alt="user icon">
-                    </a>
-                </section>
-            </nav>
-        </header>
-        <main class="main-content">
-        </main>
-    </article>
+    </div>
 </body>
+<script src="../scripts/firebase.js"></script>
+<script src="../scripts/login_and_summary/login.js" defer></script>
 
 </html>
