update missing link

--- a/html/signup.html
+++ b/html/signup.html
@@ -57,7 +57,7 @@
             </form>
             <label class="privacy-check">
                 <input type="checkbox" id="privacy-checkbox">
-                <span> I accept the <a href="#">Privacy policy</a></span>
+                <span> I accept the <a href="./privacy_policy.html">Privacy policy</a></span>
             </label>
             <div class="login-buttons">
                 <button type="submit" class="signup-button-primary" id="signup-btn" form="signup-form" disabled>
