added aria label to responsive add task button

--- a/html/board.html
+++ b/html/board.html
@@ -87,7 +87,7 @@
                 <div class="h1_section">
                     <h1>Board</h1>
                     <button class="responsive_add_task_button" onclick="openAddTaskOverlay(this)"
-                        data-task-state="todo">
+                        data-task-state="todo" aria-label="Add task">
                         <img class="add_task_res_btn" src="../assets/icons/board/addTaskButtonRes.svg"
                             alt="Add Task icon">
                     </button>
