--- a/html/signup.html
+++ b/html/signup.html
@@ -67,8 +67,8 @@
         </main>
         </div>
         <footer class="login-footer">
-            <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a href="../html/legal_notice.html">Legal notice</a>
+            <a href="../html/privacy_policy_public.html">Privacy Policy</a>
+            <a href="../html/legal_notice_public.html">Legal notice</a>
         </footer>
     </div>
 
