create seperate pages for legal notice and privacy policy for public access

--- a/html/signup.html
+++ b/html/signup.html
@@ -66,8 +66,8 @@
             </form>
         </main>
         <footer class="login-footer">
-            <a href="../html/privacyPolicy.html">Privacy Policy</a>
-            <a href="../html/legalNotice.html">Legal notice</a>
+            <a href="../html/privacy_policy_public.html">Privacy Policy</a>
+            <a href="../html/legal_notice_public.html">Legal notice</a>
         </footer>
     </div>
 
