--- a/html/login.html
+++ b/html/login.html
@@ -48,8 +48,8 @@
                 <p class="login-error-message" id="login-error-message"></p>
             </main>
             <footer class="login-footer">
-                <a href="../html/privacy_policy.html">Privacy Policy</a>
-                <a href="../html/legal_notice.html">Legal notice</a>
+                <a href="../html/privacy_policy_public.html">Privacy Policy</a>
+                <a href="../html/legal_notice_public.html">Legal notice</a>
             </footer>
         </div>
     </div>
