update on changes of login into index

--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -32,7 +32,7 @@
                     <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
                 </section>
                 <nav class="sidebar-nav">
-                    <a href="./login.html" class="sidebar-nav-section">
+                    <a href="../index.html" class="sidebar-nav-section">
                         <img class="nav-icons" src="../assets/icons/login/login.svg" alt="login icon">
                         <p>Log In</p>
                     </a>
