--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>
         </div>
         <footer class="login-footer sticky-bottom">
-            <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a href="../html/legal_notice.html">Legal notice</a>
+            <a href="../html/privacy_policy_public.html">Privacy Policy</a>
+            <a href="../html/legal_notice_public.html">Legal notice</a>
         </footer>
     </div>
 </body>
