move class d-none to standard

--- a/html/summary.html
+++ b/html/summary.html
@@ -66,6 +66,9 @@
                         <div id="header-avatar" class="header-avatar"></div>
                     </button>
                     <div id="avatar-menu" class="avatar-menu hidden">
+                        <button type="button" class="avatar-menu-item hide-for-desktop" id="menu-help">
+                            Help
+                        </button>
                         <button type="button" class="avatar-menu-item" id="menu-legal">
                             Legal Notice
                         </button>
