--- a/html/add_task.html
+++ b/html/add_task.html
@@ -74,7 +74,7 @@
                     <button type="button" class="avatar-wrapper" id="avatar-button">
                         <div id="header-avatar" class="header-avatar"></div>
                     </button>
-                    <div id="avatar-menu" class="avatar-menu hidden">
+                    <div id="avatar-menu" class="avatar-menu">
                         <button type="button" class="avatar-menu-item hide-for-desktop" id="menu-help">
                             Help
                         </button>
