fix: adjusted board html sidebar to because it had different padding values then the sidebar on other html sites

--- a/html/board.html
+++ b/html/board.html
@@ -27,19 +27,19 @@
             </section>
             <nav class="sidebar-nav">
                 <a href="../html/summary.html" class="sidebar-nav-section">
-                    <img src="../assets/icons/sideBar/summary.svg" alt="summary icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
-                <a href="../html/add_task.html" class="sidebar-nav-section">
-                    <img src="../assets/icons/sideBar/addTask.svg" alt="add task icon">
+                <a href="/html/add_task.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                     <p>Add Task</p>
                 </a>
-                <a href="../html/board.html" class="sidebar-nav-section active">
-                    <img src="../assets/icons/sideBar/board_white.svg" alt="board icon">
-                    <p>Board</p>
+                <a href="/html/board.html" class="sidebar-nav-section active">
+                    <img class="nav-icons" src="../assets/icons/sideBar/board_white.svg" alt="Board icon">
+                    <p class="white-writing">Board</p>
                 </a>
-                <a href="../html/contacts.html" class="sidebar-nav-section">
-                    <img src="../assets/icons/sideBar/contacts.svg" alt="contacts icon">
+                <a href="/html/contacts.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
             </nav>
