--- a/html/signup.html
+++ b/html/signup.html
@@ -35,21 +35,21 @@
             </a>
             <h1 class="login-title">Sign up</h1>
             <form class="signup-form" id="signup-form" novalidate>
-                <label class="sign-up-input name" for="signup-name">
+                <label class="signup-input name" for="signup-name">
                     <input type="text" id="signup-name" class="login-input" placeholder="Name" required>
                 </label>
                 <span class="input-error" id="error-signup-name"></span>
-                <label class="sign-up-input mail" for="signup-email">
+                <label class="signup-input mail" for="signup-email">
                     <input autocomplete="username" type="email" id="signup-email" class="login-input"
                         placeholder="Email" required>
                 </label>
                 <span class="input-error" id="error-signup-email"></span>
-                <label class="sign-up-input lock" for="signup-password">
+                <label class="signup-input lock" for="signup-password">
                     <input autocomplete="current-password" type="password" id="signup-password" class="login-input"
                         placeholder="Password" required>
                 </label>
                 <span class="input-error" id="error-signup-password"></span>
-                <label class="sign-up-input lock" for="signup-password-confirm">
+                <label class="signup-input lock" for="signup-password-confirm">
                     <input autocomplete="current-password" type="password" id="signup-password-confirm"
                         class="login-input" placeholder="Confirm Password" required>
                 </label>
