--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </footer>
     </div>
 </body>
+<script src="../scripts/login_and_summary/animation.js"></script>
 <script src="../scripts/firebase.js"></script>
 <script src="../scripts/login_and_summary/login.js" defer></script>
 
