--- a/html/add_task.html
+++ b/html/add_task.html
@@ -219,6 +219,7 @@
     <script src="../scripts/edit_and_add_task_overlay.js"></script>
     <script src="../script.js"></script>
     <script src="../scripts/add_task_templates.js"></script>
+    <script src="../scripts/add_task_contact_handling.js"></script>
     <script src="../scripts/add_task.js"></script>
 
 </body>
