--- a/html/board.html
+++ b/html/board.html
@@ -157,6 +157,7 @@
     <script src="../scripts/contacts/contact_data.js"></script>
     <script src="../script.js"></script>
     <script src="../scripts/add_task_templates.js"></script>
+    <script src="../scripts/add_task_contact_handling.js"></script>
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
     <script src="../scripts/search_board.js"></script>
