created new css for add task and linked it

--- a/html/board.html
+++ b/html/board.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Board</title>
     <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/add_task_subtask_contacts.css">
     <link rel="stylesheet" href="../style/contacts/add_contact.css">
     <link rel="stylesheet" href="../style/board_style.css">
     <link rel="stylesheet" href="../style/board_overlay_style.css">
