add missing logo

--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -47,6 +47,7 @@
     <article>
         <header class="header">
             <nav class="header-nav">
+                <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
                 </section>
