feat: implemented starting animation

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <body class="body">
     <div class="login-wrapper">
         <div class="login-logo-section">
-            <div class="login-logo">
-                <img src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
+            <div class="placeholder"></div>
+            <div class="login-logo animation-overlay">
+                <img id="animatedLogo"  alt="Join logo">
             </div>
             <div class="login-header">
                 <p class="login-header-text">Not a Join user?</p>
