--- a/html/contacts.html
+++ b/html/contacts.html
@@ -20,6 +20,7 @@
 
     <script src="/scripts/firebase.js"></script>
     <script src="/script.js"></script>
+    <script src="/scripts/add_task_contact_handling.js"></script>
     <script src="../scripts/contacts/contact_data.js"></script>
     <script src="../scripts/contacts/contact_template.js"></script>
     <script src="../scripts/board_overlay_data.js"></script>
