color background of article like board and add task.

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -59,7 +59,7 @@
             <a href="../html/legal_notice.html">Legal notice</a>
         </footer>
     </aside>
-    <article>
+    <article class="article-bg">
         <header class="header">
             <nav class="header-nav">
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
