fix: various little adjustments when responsive
feat: included css script add_task_subtask_contacts.css

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
     <link rel="stylesheet" href="../style/add_task_responsive.css">
+    <link rel="stylesheet" href="../style/add_task_subtask_contacts.css">
 
     <script src="/scripts/firebase.js"></script>
     <script src="/script.js"></script>
