feat: implemented sticky class for sidebar in case of long name - added css class for long names to break them down

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -89,7 +89,7 @@
             </nav>
         </header>
         <main class="contact-main">
-            <aside id="contactsAsideElement" class="sidebar-contacts">
+            <aside id="contactsAsideElement" class="sidebar-contacts position-stick-contacts">
                 <div class="add-contact-btn-position">
                     <button onclick="directionOfIncomingDialog('dialogWindow' , 'addContent')" class="add-contact-btn">Add new contact
                         <img class="add-contact-btn-img" src="../assets/icons/contacts/person_add.svg"
