move all add task js and css files into subfolder add_task. Update links in related html files

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -13,15 +13,15 @@
     <link rel="stylesheet" href="../style/board_overlay_style.css">
     <link rel="stylesheet" href="../style/contacts/contacts.css">
     <link rel="stylesheet" href="../style/contacts/add_contact.css">
-    <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/add_task/add_task.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
-    <link rel="stylesheet" href="../style/add_task_responsive.css">
-    <link rel="stylesheet" href="../style/add_task_subtask_contacts.css">
+        <link rel="stylesheet" href="../style/add_task/add_task_responsive.css">
+        <link rel="stylesheet" href="../style/add_task/add_task_subtask_contacts.css">
 
     <script src="/scripts/firebase.js"></script>
     <script src="/script.js"></script>
-    <script src="/scripts/add_task_contact_handling.js"></script>
+    <script src="../scripts/add_task/add_task_contact_handling.js"></script>
     <script src="../scripts/contacts/contact_data.js"></script>
     <script src="../scripts/contacts/contact_template.js"></script>
     <script src="../scripts/board_overlay_data.js"></script>
