--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../style/board_style.css">
     <link rel="stylesheet" href="../style/board_overlay_style.css">
     <link rel="stylesheet" href="../style/contacts/contacts.css">
-    <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/add_task/add_task.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
     <link rel="stylesheet" href="../style/legal_privacy_help.css">
