--- a/html/summary.html
+++ b/html/summary.html
@@ -23,7 +23,7 @@
     <script src="../scripts/login_and_summary/summary.js"></script>
 </head>
 
-<body class="body" onload="renderGreeting()">
+<body class="body" onload="initSummaryPage()">
     <aside class="sidebar sidebar-sticky">
         <div class="sidebar_upper_section">
             <section class="logo-section">
