fix: applied articel-bg class to all legal & privacy html files

--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -44,7 +44,7 @@
             </footer>
         </div>
     </aside>
-    <article>
+    <article class="article-bg">
         <header class="header">
             <nav class="header-nav">
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
