--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -58,7 +58,7 @@
             </footer>
         </div>
     </aside>
-    <article>
+    <article class="article-bg">
         <header class="header">
             <nav class="header-nav">
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
