--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -54,7 +54,7 @@
             </div>
             <footer class="sidebar-footer">
                 <a href="../html/privacy_policy.html">Privacy Policy</a>
-                <a class="active disable" href="../html/legal_notice.html">Legal notice</a>
+                <a class="active-legal disable" href="../html/legal_notice.html">Legal notice</a>
             </footer>
         </div>
     </aside>
