move script files to end of body. Update links of firebase.js and script.js

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -19,15 +19,6 @@
     <link rel="stylesheet" href="../style/add_task/add_task_responsive.css">
     <link rel="stylesheet" href="../style/add_task/add_task_subtask_contacts.css">
 
-    <script src="/scripts/firebase.js"></script>
-    <script src="/script.js"></script>
-    <script src="../scripts/add_task/add_task_contact_handling.js"></script>
-    <script src="../scripts/contacts/contact_data.js"></script>
-    <script src="../scripts/contacts/contact_template.js"></script>
-    <script src="../scripts/board/board_overlay_data.js"></script>
-    <script src="../scripts/login_and_summary/avatar.js"></script>
-
-
 </head>
 
 <body onload="fetchContactList()" class="body">
@@ -125,6 +116,13 @@
             </dialog>
         </main>
     </article>
+    <script src="../scripts/firebase.js"></script>
+    <script src="../script.js"></script>
+    <script src="../scripts/add_task/add_task_contact_handling.js"></script>
+    <script src="../scripts/contacts/contact_data.js"></script>
+    <script src="../scripts/contacts/contact_template.js"></script>
+    <script src="../scripts/board/board_overlay_data.js"></script>
+    <script src="../scripts/login_and_summary/avatar.js"></script>
     <script src="../scripts/contacts/contacts.js"></script>
     <script src="../scripts/contacts/contact_dialog.js"></script>
 
