bugfix false class name to disable link of active page to itself

--- a/html/legal_notice_public.html
+++ b/html/legal_notice_public.html
@@ -42,7 +42,7 @@
             </div>
             <footer class="sidebar-footer">
                 <a href="../html/privacy_policy_public.html">Privacy Policy</a>
-                <a class="active-legal disable" href="../html/legal_notice_public.html">Legal notice</a>
+                <a class="active-legal disabled" href="../html/legal_notice_public.html">Legal notice</a>
             </footer>
         </div>
     </aside>
