--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -39,7 +39,7 @@
                 </nav>
             </div>
             <footer class="sidebar-footer">
-                <a class="active disable" href="../html/privacy_policy_public.html">Privacy Policy</a>
+                <a class="active disabled" href="../html/privacy_policy_public.html">Privacy Policy</a>
                 <a href="../html/legal_notice_public.html">Legal notice</a>
             </footer>
         </div>
