--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -51,7 +51,7 @@
                 </nav>
             </div>
             <footer class="sidebar-footer">
-                <a class="active disable" href="../html/privacy_policy.html">Privacy Policy</a>
+                <a class="active disabled" href="../html/privacy_policy.html">Privacy Policy</a>
                 <a href="../html/legal_notice.html">Legal notice</a>
             </footer>
         </div>
