--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Log in</title>
-    <link rel="stylesheet" href="/style/standard.css">
-    <link rel="stylesheet" href="/style/summary_login/login.css">
-    <link rel="stylesheet" href="/style/summary_login/login_responsive.css">
-    <link rel="stylesheet" href="/style/mainframe.css">
-    <link rel="shortcut icon" href="/assets/icons/logo/logoSmall.svg">
+    <link rel="stylesheet" href="./style/standard.css">
+    <link rel="stylesheet" href="./style/summary_login/login.css">
+    <link rel="stylesheet" href="./style/summary_login/login_responsive.css">
+    <link rel="stylesheet" href="./style/mainframe.css">
+    <link rel="shortcut icon" href="./assets/icons/logo/logoSmall.svg">
 
 
 </head>
@@ -18,12 +18,12 @@
     <div class="login-wrapper">
         <div class="login-logo-section">
             <div class="placeholder"></div>
-            <img id="animatedLogo" src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
+            <img id="animatedLogo" src="./assets/icons/logo/logoSmall.svg" alt="Join logo">
             <div class="animation-overlay">
             </div>
             <div class="login-header">
                 <p class="login-header-text">Not a Join user?</p>
-                <a href="/html/signup.html" class="signup-button">Sign up</a>
+                <a href="./html/signup.html" class="signup-button">Sign up</a>
             </div>
         </div>
         <div class="login-container">
@@ -33,12 +33,12 @@
                     <div class="input-wrapper">
                         <input autocomplete="username" type="email" id="login-email" class="login-input"
                             placeholder="Email" required>
-                        <img src="/assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
+                        <img src="./assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
                     </div>
                     <div class="input-wrapper">
                         <input autocomplete="current-password" type="password" id="login-password" class="login-input"
                             placeholder="Password" required>
-                        <img src="/assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
+                        <img src="./assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                     </div>
                     <p class="login-error-message" id="login-error-message"></p>
                     <div class="login-buttons">
@@ -53,16 +53,16 @@
             </main>
             <div class="login-mobile">
                 <p class="login-header-text">Not a Join user?</p>
-                <a href="/html/signup.html" class="signup-button">Sign up</a>
+                <a href="./html/signup.html" class="signup-button">Sign up</a>
             </div>
         </div>
         <footer class="login-footer sticky-bottom">
-            <a href="/html/privacy_policy_public.html">Privacy Policy</a>
-            <a href="/html/legal_notice_public.html">Legal notice</a>
+            <a href="./html/privacy_policy_public.html">Privacy Policy</a>
+            <a href="./html/legal_notice_public.html">Legal notice</a>
         </footer>
     </div>
 </body>
-<script src="/scripts/firebase.js"></script>
-<script src="/scripts/login_and_summary/login.js" defer></script>
+<script src="./scripts/firebase.js"></script>
+<script src="./scripts/login_and_summary/login.js" defer></script>
 
 </html>
