update path to html files because the all exists in the same folder

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -24,27 +24,27 @@
                 <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
             </section>
             <nav class="sidebar-nav">
-                <a href="../html/summary.html" class="sidebar-nav-section">
+                <a href="summary.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
-                <a href="./add_task.html" class="sidebar-nav-section current-selection">
+                <a href="add_task.html" class="sidebar-nav-section current-selection">
                     <img class="nav-icons" src="../assets/icons/sideBar/addTask_white.svg" alt="Add Task icon">
                     <p class="white-writing">Add Task</p>
                 </a>
-                <a href="./board.html" class="sidebar-nav-section">
+                <a href="board.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="../html/contacts.html" class="sidebar-nav-section">
+                <a href="contacts.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a href="../html/legal_notice.html">Legal notice</a>
+            <a href="privacy_policy.html">Privacy Policy</a>
+            <a href="legal_notice.html">Legal notice</a>
         </footer>
     </aside>
     <section class="action-button-section show-767">
@@ -69,7 +69,7 @@
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a class="hide-in-resp help-icon" href="../html/help.html">
+                    <a class="hide-in-resp help-icon" href="help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <button type="button" class="avatar-wrapper" id="avatar-button">
