--- a/html/legal_notice_public.html
+++ b/html/legal_notice_public.html
@@ -41,8 +41,8 @@
                 </nav>
             </div>
             <footer class="sidebar-footer">
-                <a href="../html/privacy_policy_public.html">Privacy Policy</a>
-                <a class="active-legal disabled" href="../html/legal_notice_public.html">Legal notice</a>
+                <a href="privacy_policy_public.html">Privacy Policy</a>
+                <a class="active-legal disabled" href="legal_notice_public.html">Legal notice</a>
             </footer>
         </div>
     </aside>
