--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -32,27 +32,27 @@
                     <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
                 </section>
                 <nav class="sidebar-nav">
-                    <a href="/html/summary.html" class="sidebar-nav-section">
+                    <a href="summary.html" class="sidebar-nav-section">
                         <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                         <p>Summary</p>
                     </a>
-                    <a href="/html/add_task.html" class="sidebar-nav-section">
+                    <a href="add_task.html" class="sidebar-nav-section">
                         <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                         <p>Add Task</p>
                     </a>
-                    <a href="/html/board.html" class="sidebar-nav-section">
+                    <a href="board.html" class="sidebar-nav-section">
                         <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                         <p>Board</p>
                     </a>
-                    <a href="/html/contacts.html" class="sidebar-nav-section">
+                    <a href="contacts.html" class="sidebar-nav-section">
                         <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                         <p>Contacts</p>
                     </a>
                 </nav>
             </div>
             <footer class="sidebar-footer">
-                <a class="active disabled" href="../html/privacy_policy.html">Privacy Policy</a>
-                <a href="../html/legal_notice.html">Legal notice</a>
+                <a class="active disabled" href="privacy_policy.html">Privacy Policy</a>
+                <a href="legal_notice.html">Legal notice</a>
             </footer>
         </div>
     </aside>
@@ -62,7 +62,7 @@
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a class="d-none" href="../html/help.html">
+                    <a class="d-none" href="help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <button type="button" class="avatar-wrapper" id="avatar-button">
