bugfix sidebar in mobile display was not sticky to bottom.

--- a/html/help.html
+++ b/html/help.html
@@ -23,36 +23,34 @@
 </head>
 
 <body class="body">
-    <aside class="sidebar-background-color">
-        <div class="sidebar">
-            <div class="sidebar_upper_section">
-                <section class="logo-section">
-                    <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
-                </section>
-                <nav class="sidebar-nav">
-                    <a href="summary.html" class="sidebar-nav-section">
-                        <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
-                        <p>Summary</p>
-                    </a>
-                    <a href="add_task.html" class="sidebar-nav-section">
-                        <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
-                        <p>Add Task</p>
-                    </a>
-                    <a href="board.html" class="sidebar-nav-section">
-                        <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
-                        <p>Board</p>
-                    </a>
-                    <a href="contacts.html" class="sidebar-nav-section">
-                        <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
-                        <p>Contacts</p>
-                    </a>
-                </nav>
-            </div>
-            <footer class="sidebar-footer">
-                <a href="privacy_policy.html">Privacy Policy</a>
-                <a href="legal_notice.html">Legal notice</a>
-            </footer>
+    <aside class="sidebar sidebar-sticky">
+        <div class="sidebar_upper_section">
+            <section class="logo-section">
+                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+            </section>
+            <nav class="sidebar-nav">
+                <a href="summary.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
+                    <p>Summary</p>
+                </a>
+                <a href="add_task.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
+                    <p>Add Task</p>
+                </a>
+                <a href="board.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
+                    <p>Board</p>
+                </a>
+                <a href="contacts.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
+                    <p>Contacts</p>
+                </a>
+            </nav>
         </div>
+        <footer class="sidebar-footer">
+            <a href="privacy_policy.html">Privacy Policy</a>
+            <a href="legal_notice.html">Legal notice</a>
+        </footer>
     </aside>
     <article>
         <header class="header">
