--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -25,12 +25,11 @@
 </head>
 
 <body class="body">
-    <aside class="sidebar-background-color">
-        <div class="sidebar">
-            <div class="sidebar_upper_section">
-                <section class="logo-section">
-                    <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
-                </section>
+    <aside class="sidebar sidebar-sticky">
+        <div class="sidebar_upper_section">
+            <section class="logo-section">
+                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+            </section>
                 <nav class="sidebar-nav">
                     <a href="summary.html" class="sidebar-nav-section">
                         <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
@@ -49,12 +48,11 @@
                         <p>Contacts</p>
                     </a>
                 </nav>
-            </div>
-            <footer class="sidebar-footer">
-                <a class="active disabled" href="privacy_policy.html">Privacy Policy</a>
-                <a href="legal_notice.html">Legal notice</a>
-            </footer>
         </div>
+        <footer class="sidebar-footer">
+            <a class="active disabled" href="privacy_policy.html">Privacy Policy</a>
+            <a href="legal_notice.html">Legal notice</a>
+        </footer>
     </aside>
     <article class="article-bg">
         <header class="header">
