--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -25,24 +25,22 @@
 </head>
 
 <body class="body">
-    <aside class="sidebar-background-color">
-        <div class="sidebar">
-            <div class="sidebar_upper_section">
-                <section class="logo-section">
-                    <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
-                </section>
-                <nav class="sidebar-nav">
-                    <a href="../index.html" class="sidebar-nav-section">
-                        <img class="nav-icons" src="../assets/icons/login/login.svg" alt="login icon">
-                        <p>Log In</p>
-                    </a>
-                </nav>
-            </div>
-            <footer class="sidebar-footer">
-                <a class="active disabled" href="privacy_policy_public.html">Privacy Policy</a>
-                <a href="legal_notice_public.html">Legal notice</a>
-            </footer>
+    <aside class="sidebar sidebar-sticky">
+        <div class="sidebar_upper_section">
+            <section class="logo-section">
+                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+            </section>
+            <nav class="sidebar-nav">
+                <a href="../index.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/login/login.svg" alt="login icon">
+                    <p>Log In</p>
+                </a>
+            </nav>
         </div>
+        <footer class="sidebar-footer">
+            <a class="active disabled" href="privacy_policy_public.html">Privacy Policy</a>
+            <a href="legal_notice_public.html">Legal notice</a>
+        </footer>
     </aside>
     <article class="article-bg">
         <header class="header">
