fix: changed css class for signup logo to not be the same like the login-logo class, so adjustments in login.css for the logo dont affect the signup.html logo

--- a/html/signup.html
+++ b/html/signup.html
@@ -24,7 +24,7 @@
     </div>
     <div class="login-wrapper">
         <div class="login-logo-section">
-            <div class="login-logo" >
+            <div class="login-logo-signup" >
                 <img src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
             </div>
         </div>
