--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -55,6 +55,8 @@
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Privacy Policy</h1>
+                    <button onclick="redirectBack()" class="go-back-btn"><img src="../assets/icons/contacts/go_back.svg"
+                            alt="go back to source site"></button>
                 </div>
                 <h2>Datenschutzhinweise</h2>
                 <h2>Verantwortlicher</h2>
