added missing links to public privacy policy

--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -31,10 +31,14 @@
                 <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
             </section>
             <nav class="sidebar-nav">
-                <a href="../index.html" class="sidebar-nav-section">
+                <a href="../index.html" class="sidebar-nav-section flex-none">
                     <img class="nav-icons" src="../assets/icons/login/login.svg" alt="login icon">
                     <p>Log In</p>
                 </a>
+                <div class="public-links">
+                    <a href="./privacy_policy_public.html" class="sidebar-nav-section flex-none">Privacy Policy</a>
+                    <a href="./legal_notice_public.html" class="sidebar-nav-section flex-none">Legal Notice</a>
+                </div>
             </nav>
         </div>
         <footer class="sidebar-footer">
