added correct hover effects

--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -31,7 +31,7 @@
                 <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
             </section>
             <nav class="sidebar-nav">
-                <a href="../index.html" class="sidebar-nav-section flex-none">
+                <a href="../index.html" class="sidebar-nav-section flex-none log-out">
                     <img class="nav-icons" src="../assets/icons/login/login.svg" alt="login icon">
                     <p>Log In</p>
                 </a>
