fix: added active class to links

--- a/html/legal_notice_public.html
+++ b/html/legal_notice_public.html
@@ -39,7 +39,7 @@
                 </a>
                 <div class="public-links">
                     <a href="./privacy_policy_public.html" class="sidebar-nav-section flex-none">Privacy Policy</a>
-                    <a href="./legal_notice_public.html" class="sidebar-nav-section flex-none">Legal Notice</a>
+                    <a href="./legal_notice_public.html" class="sidebar-nav-section active flex-none">Legal Notice</a>
                 </div>
             </nav>
         </div>
