--- a/html/privacy_policy_public.html
+++ b/html/privacy_policy_public.html
@@ -36,7 +36,7 @@
                     <p>Log In</p>
                 </a>
                 <div class="public-links">
-                    <a href="./privacy_policy_public.html" class="sidebar-nav-section flex-none">Privacy Policy</a>
+                    <a href="./privacy_policy_public.html" class="sidebar-nav-section active flex-none">Privacy Policy</a>
                     <a href="./legal_notice_public.html" class="sidebar-nav-section flex-none">Legal Notice</a>
                 </div>
             </nav>
