update password error message

--- a/html/signup.html
+++ b/html/signup.html
@@ -48,7 +48,7 @@
                     <input autocomplete="current-password" type="password" id="signup-password" class="login-input"
                         placeholder="Password" required>
                 </label>
-                <span class="input-error input-error-password" id="error-signup-password"></span>
+                <span class="input-error" id="error-signup-password"></span>
                 <label class="sign-up-input lock" for="signup-password-confirm">
                     <input autocomplete="current-password" type="password" id="signup-password-confirm"
                         class="login-input" placeholder="Confirm Password" required>
