--- a/html/summary.html
+++ b/html/summary.html
@@ -88,7 +88,7 @@
                 <h2 class="greeting-overlay-name"></h2>
             </div>
             <div class="contact-header-text summary-padding-top">
-                <h1 class="h1">Join 360</h1>
+                <h1>Join 360</h1>
                 <div class="separator-vertical"></div>
                 <span class="contact-sub">Key Metrics at a Glance</span>
             </div>
