--- a/html/summary.html
+++ b/html/summary.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../style/summary_login/summary.css">
     <link rel="stylesheet" href="../style/summary_login/summary_responsive.css">
     <link rel="stylesheet" href="../style/add_task/add_task.css">
+    <link rel="stylesheet" href="../style/board/board_style.css">
     <link rel="stylesheet" href="../style/contacts/contacts.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
     
